export const snapshot = {};

snapshot[`Webhook View Command - Help Text 1`] = `
stdout:
"
Usage: view <webhookId>

Description:

  View a webhook

Options:

  -h, --help  - Show this help.                     
  -j, --json  - Force machine-readable JSON output  
  --text      - Output human-readable text          

Examples:

  View a webhook as JSON         linear webhook view webhook_123       
  View a webhook in the terminal linear webhook view webhook_123 --text

"
stderr:
""
`;

snapshot[`Webhook View Command - JSON Missing Webhook Reference 1`] = `
stdout:
'{
  "success": false,
  "error": {
    "type": "unknown_error",
    "message": "Missing argument(s): webhookId",
    "suggestion": null,
    "context": "Failed to view webhook"
  }
}
'
stderr:
""
`;

snapshot[`Webhook View Command - Shows Webhook 1`] = `
stdout:
"Issue events
ID: webhook-1
Status: enabled
Scope: Engineering (ENG)
URL: https://example.com/hooks/issues
Resources: Issue, Comment
Creator: John Doe
Created: 2026-03-13T10:00:00Z
Updated: 2026-03-13T10:05:00Z
"
stderr:
""
`;

snapshot[`Webhook View Command - JSON Output 1`] = `
stdout:
'{
  "id": "webhook-1",
  "label": "Issue events",
  "displayLabel": "Issue events",
  "url": "https://example.com/hooks/issues",
  "status": "enabled",
  "scope": "Engineering (ENG)",
  "enabled": true,
  "archivedAt": null,
  "allPublicTeams": false,
  "resourceTypes": [
    "Issue",
    "Comment"
  ],
  "createdAt": "2026-03-13T10:00:00Z",
  "updatedAt": "2026-03-13T10:05:00Z",
  "team": {
    "id": "team-1",
    "key": "ENG",
    "name": "Engineering"
  },
  "creator": {
    "id": "user-1",
    "name": "jdoe",
    "displayName": "John Doe"
  }
}
'
stderr:
""
`;

snapshot[`Webhook View Command - JSON Webhook Not Found 1`] = `
stdout:
'{
  "success": false,
  "error": {
    "type": "not_found",
    "message": "Webhook not found: webhook-missing",
    "suggestion": null,
    "context": "Failed to view webhook"
  }
}
'
stderr:
""
`;
